--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -925,7 +925,7 @@
    "id": "7e9c07cb",
    "metadata": {},
    "source": [
-    "### C.  ong short-term memory (LSTM) with Word2Vec"
+    "### C.  Long short-term memory (LSTM) with Word2Vec"
    ]
   },
   {
